user authentication with hashing added

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGOOSE=mongodb+srv://Pratik059:Pratik021@estatemern.qygfcze.mongodb.net/?retryWrites=true&w=majority&appName=EstateMERN
+MONGO_URI=mongodb+srv://Pratik059:Pratik021@estatemern.qygfcze.mongodb.net/estateDB?retryWrites=true&w=majority&appName=EstateMERN
